# statbus

./: .aider.conf.yml  .aiderignore  .dockerignore  .editorconfig  .env  .env-psql-development.sh  .env.example  .flowconfig  .gitignore  .mcp.json  .prettierignore  .sonarcloud.properties  .supabase-docker-local-development-env  .users.example  .yarnrc  AGENTIC.md  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONVENTIONS.md  GitVersion.yml  INSTALL.md  LICENSE  README.md  STATBUS_REPRODUCTION_INSTRUCTIONS.md  TODO-background-update-of-tables.md  TODO.md  TROUBLESHOOTING.md  appsettings.Development.json  appsettings.Production.json  appsettings.Shared.json  appsettings.json  cloud.sh  deployment.md  dev.sh  development.md  docker-compose-db.yml  docker-compose-db.yml.save  docker-compose-prod.yml  docker-compose.app.yml  (+43 more)
.backlog/: config.yml
.claude/: settings.json  team.name
.devcontainer/: devcontainer.json
.githooks/: commit-msg  pre-commit  pre-push  test-commit-msg.sh
.github/: actionlint.yaml
.zed/: settings.json
Reports/: 01_TableA_ActivityCategories.rdl  1 report.rdl  DataSet1.rsd  DataSourceNSCReg.rds  Reports.rptproj  Reports.rptproj.rsuser
postgres/pg_jwt_validator/: Cargo.toml  pg_jwt_validator.control
postgres/pg_jwt_validator/.cargo/: config.toml
postgres/pg_jwt_validator/src/: lib.rs
postgres/pg_jwt_validator/tests/pg_regress/expected/: 01_jwt_functions.out  02_validate_token.out  03_c_abi_validator.out
postgres/pg_jwt_validator/tests/pg_regress/sql/: 01_jwt_functions.sql  02_validate_token.sql  03_c_abi_validator.sql  setup.sql
(+8017 files in other folders)
